update cart + order